# s21-core

./: .gitignore
A/A1_Maze-1/src/: Makefile  agent.c  cave.c  cave.h  generator.c  generator.h  main.c  maze.c  maze.h  server.c  solver.c  solver.h
A/A1_Maze-1/src/caves/: cave.txt
A/A1_Maze-1/src/tests/: caves_tests.c  generator_tests.c  main_tests.c  solver_tests.c  tests.h
C/C3_SimpleBashUtils-2/src/cat/: s21_cat.c  test.sh  test_leaks.sh
C/C3_SimpleBashUtils-2/src/grep/: s21_grep.c
C/C4_s21_math-1/src/: Makefile  s21_abs.c  s21_cos.c  s21_fabs.c  s21_floor.c  s21_fmod.c  s21_math  s21_math.c  s21_math.h  s21_pow.c  s21_sin.c  s21_sqrt.c  s21_tan.c  s21_test.c
C/C6_s21_matrix-1/src/: Makefile  s21_matrix.c  s21_matrix.h  tests.c
C/C6_s21_matrix-1/src/tests/: s21_calc_complements_test.c  s21_create_test.c  s21_determinant_test.c  s21_inverse_test.c  s21_mult_matrix_test.c  s21_mult_number_test.c  s21_sub_test.c  s21_sum_test.c  s21_transpose_test.c
C/C7_BrickGame_v1.0-1/src/: Makefile  a.out  tetris.c
C/C7_BrickGame_v1.0-1/src/doc/: index.html
C/C7_SmartCalc_v1.0-1/src/: CMakeLists.txt  Makefile  calculator.c  calculator.h  credit.cpp  credit.h  credit.ui  deposit.cpp  deposit.h  deposit.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow2.cpp  mainwindow2.h  mainwindow2.ui  stack.c  tests.c  tests.h  text.txt
CPP/CPP1_s21_matrixplus-1/src/: Makefile  s21_matrix_oop.cc  s21_matrix_oop.gcda  s21_matrix_oop.gcno  s21_matrix_oop.h  s21_matrix_test.cc  s21_matrix_test.gcda  s21_matrix_test.gcno  test
CPP/CPP3_BrickGame_v2.0-1/src/: Makefile
CPP/CPP3_BrickGame_v2.0-1/src/doc/: index.html
CPP/CPP3_BrickGame_v2.0-1/src/make/: CMakeLists.txt  Makefile  launcher.c
CPP/CPP3_BrickGame_v2.0-1/src/tests/: snake_all_tests.cpp  tetris_all_tests.c
DO/D01_Linux-1/src/: report.md
DO/DO2_LinuxNetwork-1/src/: report.md
SQL/SQL_beginner.Day00-1/src/ex00/: day00_ex00.sql
SQL/SQL_beginner.Day00-1/src/ex01/: day00_ex01.sql
SQL/SQL_beginner.Day00-1/src/ex02/: day00_ex02.sql
SQL/SQL_beginner.Day00-1/src/ex04/: day00_ex04.sql
SQL/SQL_beginner.Day00-1/src/ex05/: day00_ex05.sql
SQL/SQL_beginner.Day00-1/src/ex06/: day00_ex06.sql
SQL/SQL_beginner.Day00-1/src/ex07/: day00_ex07.sql
SQL/SQL_beginner.Day00-1/src/ex08/: day00_ex08.sql
SQL/SQL_beginner.Day00-1/src/ex09/: day00_ex09.sql
SQL/SQL_beginner.Day01-1/src/ex00/: day01_ex00.sql
SQL/SQL_beginner.Day01-1/src/ex01/: day01_ex01.sql
SQL/SQL_beginner.Day01-1/src/ex02/: day01_ex02.sql
SQL/SQL_beginner.Day01-1/src/ex03/: day01_ex03.sql
SQL/SQL_beginner.Day01-1/src/ex05/: day01_ex05.sql
SQL/SQL_beginner.Day01-1/src/ex06/: day01_ex06.sql
SQL/SQL_beginner.Day01-1/src/ex07/: day01_ex07.sql
SQL/SQL_beginner.Day01-1/src/ex08/: day01_ex08.sql
SQL/SQL_beginner.Day01-1/src/ex09/: day01_ex09.sql
SQL/SQL_beginner.Day01-1/src/ex10/: day01_ex10.sql
SQL/SQL_beginner.Day02-1/src/ex00/: day02_ex00.sql
SQL/SQL_beginner.Day02-1/src/ex01/: day02_ex01.sql
SQL/SQL_beginner.Day02-1/src/ex02/: day02_ex02.sql
SQL/SQL_beginner.Day02-1/src/ex04/: day02_ex04.sql
SQL/SQL_beginner.Day02-1/src/ex05/: day02_ex05.sql
SQL/SQL_beginner.Day02-1/src/ex06/: day02_ex06.sql
SQL/SQL_beginner.Day02-1/src/ex07/: day02_ex07.sql
SQL/SQL_beginner.Day02-1/src/ex08/: day02_ex08.sql
SQL/SQL_beginner.Day02-1/src/ex09/: day02_ex09.sql
SQL/SQL_beginner.Day02-1/src/ex10/: day02_ex10.sql
SQL/SQL_beginner.Day03-1/src/ex00/: day03_ex00.sql
SQL/SQL_beginner.Day03-1/src/ex01/: day03_ex01.sql
SQL/SQL_beginner.Day03-1/src/ex02/: day03_ex02.sql
SQL/SQL_beginner.Day03-1/src/ex03/: day03_ex03.sql
SQL/SQL_beginner.Day03-1/src/ex04/: day03_ex04.sql
SQL/SQL_beginner.Day04-1/src/: app.js
(+72 files in other folders)
